- complete signUp method - refactor - add new route - refactor error message in api-service - fix text-align in forgotPasswordForm -fix redirect to CHECK_EMAIL_PAGE from forgotPasswordForm -refactor checkEmail form - add Send password recovery email method - add password recovery method

--- a/src/components/auth/forgotPassword/forgot-password-form.module.scss
+++ b/src/components/auth/forgotPassword/forgot-password-form.module.scss
@@ -30,11 +30,13 @@
 .bodyContainer{
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
-.body{
+.bodyText{
   display: inline;
   color: var(--color-light-900);
+
 }
 
 .submit {
